--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "rootDirs": [".", "./.react-router/types"],
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
